small fixes on mobile

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,7 +4,7 @@
     margin: 12px 10px;
   }
   .footer {
-    padding: 24px;
+    padding: 35px 24px;
   }
 }
 
